--- a/react-redux-app/package.json
+++ b/react-redux-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux",
+  "name": "react-redux-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +7,11 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-infinite-scroller": "^1.2.2",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
     "reqwest": "^2.0.5"
   },
   "scripts": {
